# ServerWolly

./: CMakeLists  CMakeLists.txt  ListOfSockets.cpp  ListOfSockets.h  PrintCommand.h  Server.cpp  Server.h  acceptingClients.cpp  acceptingClients.h  joinCommand.cpp  joinCommand.h  main.cpp  playCommand.cpp  playCommand.h
include/: CloseCommand.h  Command.h  CommandsManagers.h  JoinCommand.h  ListCommand.h  PoolWorkerThread.h  Server.h  Start.h  StartCommand.h  Task.h  Thread.h  ThreadPool.h  WaitingRoom.h  WorkQueue.h  acceptingClients.h  joinCommand.h  playCommand.h  startCommand.h  threadFor2Clients.h
src/: CloseCommand.cpp  CommandsManagers.cpp  JoinCommand.cpp  ListCommand.cpp  PoolWorkerThread.cpp  PrintCommand.cpp  Server.cpp  Start.cpp  StartCommand.cpp  Task.cpp  Thread.cpp  ThreadPool.cpp  WaitingRoom.cpp  WorkQueue.cpp  acceptingClients.cpp  joinCommand.cpp  main.cpp  playCommand.cpp  startCommand.cpp  threadFor2Clients.cpp
